CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (pxlmodules)
add_subdirectory(lhco/converter)
add_subdirectory(selection/bjet)
add_subdirectory(selection/electron)
add_subdirectory(selection/jet)
add_subdirectory(selection/muon)
add_subdirectory(reconstruction/Matching)
add_subdirectory(reconstruction/NeutrinoPz)
add_subdirectory(tools/FinalStateNaming)
add_subdirectory(tools/TTreeFiller)
