CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (pxlmodules)
ADD_DEFINITIONS(-std=c++0x)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}")
FIND_PACKAGE(PXL REQUIRED)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${PXL_INCLUDE_DIRS})

#add_subdirectory(lhco/converter)
#add_subdirectory(selection/bjet)
#add_subdirectory(selection/electron)
#add_subdirectory(selection/jet)
#add_subdirectory(selection/muon)
#add_subdirectory(reconstruction/Matching)
add_subdirectory(reconstruction/NeutrinoPz)
#add_subdirectory(tools/FinalStateNaming)
#add_subdirectory(tools/TTreeFiller)
#add_subdirectory(tools/AddParticles)
#add_subdirectory(tools/Counting)
#add_subdirectory(tools/ScaleWeight)
